--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -5,28 +5,32 @@
     <div class="form-group">
         <label asp-for="Name"></label>
         <input asp-for="Name" name="Name" class="form-control w-25">
+        <span class="alert-info" asp-validation-for="Name"></span>
     </div>
     <div class="form-group">
         <label asp-for="Location"></label>
         <select asp-for="Location" name="Location" class="form-select w-25">
-            <option selected>Choose Location</option>
+            <option value="">Choose Location</option>
             <option value="Chicago">Chicago</option>
             <option value="Dallas">Dallas</option>
             <option value="Seattle">Seattle</option>
         </select>
+        <span class="alert-warning" asp-validation-for="Location"></span>
     </div>
     <div class="form-group">
         <label asp-for="Language"></label>
         <select asp-for="Language" name="Language" class="form-select w-25">
-            <option selected>Choose Language</option>
+            <option value="">Choose Language</option>
             <option value="Python">Python</option>
             <option value="MERN">MERN</option>
             <option value="C#">C#</option>
         </select>
+        <span class="alert-danger" asp-validation-for="Language"></span>
     </div>
     <div class="form-group">
         <label asp-for="Comment"></label>
         <input asp-for="Comment" name="Comment" type="textarea" class="form-control w-25">
+        <span class="alert-info" asp-validation-for="Comment"></span>
     </div>
     <div>
     <input type="submit" class="btn btn-outline-success btn-lg">
